cmake_minimum_required(VERSION 3.16)
project(atcoder)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(atcoder 1_9/d.cpp)
add_executable(1_10_a 1_10/a.cpp)
add_executable(1_10_b 1_10/b.cpp)
add_executable(ari_2_1 ari_2_1/challenge.cpp)
add_executable(ari_2_2 ari_2_2/challenge.cpp)
add_executable(ari_2_3 ari_2_3/challenge.cpp)
add_executable(ari_2_4 ari_2_4/challenge.cpp)
add_executable(ari_2_4_union_tree ari_2_4_union_tree/challenge.cpp)
add_executable(cheetah_1_kiwi_juice cheetah_1_kiwi_juice/challenge.cpp)
add_executable(cheetah_2_full_search cheetah_2_full_search/challenge.cpp)
add_executable(cheetah_3_cryptography cheetah_3_cryptography/challenge.cpp)
add_executable(cheetah_4_interesting_number cheetah_4_interesting_number/challenge.cpp)
add_executable(cheetah_5_palindrome cheetah_5_palindrome/challenge.cpp)
add_executable(cheetah_6_friend_count cheetah_6_friend_count/challenge.cpp)
add_executable(cheetah_7_broken_robot cheetah_7_broken_robot/challenge.cpp)
add_executable(abc029_c abc029_c/challenge.cpp)
add_executable(byak_01 byak_01/challenge.cpp)
add_executable(cheetah_8_maze_maker cheetah_8_maze_maker/challenge.cpp)
add_executable(abc007_3 abc007_3/challenge.cpp)
add_executable(cheetah_9_number_magic cheetah_9_number_magic/challenge.cpp)
add_executable(cheetah_10_corporation_salary cheetah_10_corporation_salary/challenge.cpp)
add_executable(cheetah_11_bad_neighbors cheetah_11_bad_neighbors/challenge.cpp)
add_executable(cheetah_12_king_and_knite cheetah_12_king_and_knite/challenge.cpp)