cmake_minimum_required(VERSION 3.16)
project(atcoder)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(atcoder 1_9/d.cpp)
add_executable(1_10_a 1_10/a.cpp)
add_executable(1_10_b 1_10/b.cpp)
add_executable(ari_2_1 ari_2_1/challenge.cpp)
add_executable(ari_2_2 ari_2_2/challenge.cpp)
add_executable(ari_2_3 ari_2_3/challenge.cpp)
add_executable(ari_2_4 ari_2_4/challenge.cpp)
add_executable(ari_2_4_union_tree ari_2_4_union_tree/challenge.cpp)
add_executable(cheetah_1_kiwi_juice cheetah_1_kiwi_juice/challenge.cpp)
add_executable(cheetah_1_kiwi_juice2 cheetah_1_kiwi_juice/rechallenge.cpp)

add_executable(cheetah_2_full_search cheetah_2_full_search/challenge.cpp)
add_executable(cheetah_2_full_search2 cheetah_2_full_search/rechallenge.cpp)

add_executable(cheetah_3_cryptography cheetah_3_cryptography/challenge.cpp)
add_executable(cheetah_3_cryptography2 cheetah_3_cryptography/rechallenge.cpp)

add_executable(cheetah_4_interesting_number cheetah_4_interesting_number/challenge.cpp)
add_executable(cheetah_4_interesting_number2 cheetah_4_interesting_number/rechallenge.cpp)

add_executable(cheetah_5_palindrome cheetah_5_palindrome/challenge.cpp)
add_executable(cheetah_5_palindrome2 cheetah_5_palindrome/rechallenge.cpp)

add_executable(cheetah_6_friend_count cheetah_6_friend_count/challenge.cpp)
add_executable(cheetah_6_friend_count2 cheetah_6_friend_count/rechallenge.cpp)

add_executable(cheetah_7_broken_robot cheetah_7_broken_robot/challenge.cpp)
add_executable(cheetah_7_broken_robot2 cheetah_7_broken_robot/rechallenge.cpp)

add_executable(abc029_c abc029_c/challenge.cpp)

add_executable(byak_01 byak_01/challenge.cpp)

add_executable(cheetah_8_maze_maker cheetah_8_maze_maker/challenge.cpp)
add_executable(cheetah_8_maze_maker2 cheetah_8_maze_maker/rechallenge.cpp)
add_executable(cheetah_8_maze_maker3 cheetah_8_maze_maker/rechallenge2.cpp)

add_executable(abc007_3 abc007_3/challenge.cpp)
add_executable(cheetah_9_number_magic cheetah_9_number_magic/challenge.cpp)
add_executable(cheetah_10_corporation_salary cheetah_10_corporation_salary/challenge.cpp)
add_executable(cheetah_11_bad_neighbors cheetah_11_bad_neighbors/challenge.cpp)
add_executable(cheetah_12_king_and_knite cheetah_12_king_and_knite/challenge.cpp)
add_executable(cheetah_14_colorful_boxes_and_balls cheetah_14_colorful_boxes_and_balls/challenge.cpp)
add_executable(cheetah_15_stock_history cheetah_15_stock_history/challenge.cpp)
add_executable(cheetah_16_batch_system cheetah_16_batch_system/challenge.cpp)
add_executable(cheetah_17_circles_country cheetah_17_circles_country/challenge.cpp)
add_executable(cheetah_18_hamilton_path cheetah_18_hamilton_path/challenge.cpp)
add_executable(cheetah_19_binary_flips cheetah_19_binary_flips/challenge.cpp)
add_executable(cheetah_20_cut_sticks cheetah_20_cut_sticks/challenge.cpp)